<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sheep Dating</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_NewSheepData">New sheep data</string>
    <string name="et_EnterAge">Enter age</string>
    <string name="et_EnterName">Enter name</string>
    <string name="b_insert_data">Insert data</string>
    <string name="b_view_all">View all</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

</resources>
